--- a/src/frontend/styles/full-clndr.less
+++ b/src/frontend/styles/full-clndr.less
@@ -84,7 +84,7 @@
         width: 14.2857%;
         height: 66px;
         padding: 24px 0;
-
+        cursor: pointer;
         text-align: center;
         color: #4f4f4f;
         background-color: @light-gray;
